--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -22,6 +22,11 @@
                 <action android:name="android.app.NotificationManager.ACTION_NOTIFY" />
             </intent-filter>
         </receiver>
+		<receiver android:name=".CopyNotificationBackground" android:exported="true" android:enabled="true"> 
+            <intent-filter> 
+                <action android:name="com.cyanogenmod.cmparts.activities.NOTIFICATION_BACKGROUND_CHANGE"></action> 
+            </intent-filter> 
+         </receiver> 
          <activity android:name=".activities.MainActivity" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
